# XL-Ventures-AI

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  plan.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: test.yml
backend/: .dockerignore  .env.example  .env.sample  .flake8  .gitignore  Dockerfile  main.py  prospect_pilot.db  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  run_investment_workflow.py  run_what_if_chat.py  test_models.py  test_platform.py
backend/app/: __init__.py  config.py  dependencies.py  llm.py  main.py  test_pipeline.py
backend/tests/: __init__.py  test_stubs.py
demo/: demo_guide.md  sample_icp.json  test_cases.md
docs/: 1_planner_agent.md  2_memory_engine.md  3_execution_engine.md  4_agent_registry.md  5_tool_registry.md  6_database_design.md  7_frontend_design.md  8_demo_guide.md  9_setup_and_walkthrough.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  api_reference.md  architecture.md  codebase_notes.md  components.md  data_model.md  sequence_flows.md  setup_deployment.md  tech_stack.md  testing.md  troubleshooting.md
frontend/: .env.development  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: llm.py  main.py
src/agents/: company_profile_agent.py  contact_agent.py  discovery_agent.py  founder_profile_agent.py  github_agent.py  market_analysis_agent.py  news_agent.py  planner_agent.py  report_agent.py  scoring_agent.py  validation_agent.py
tests/: test_stubs.py
(+184 files in other folders)
