[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "venturepilot-ai"
version = "0.1.0"
description = "Agentic AI platform for B2B opportunity discovery"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.flake8]
max-line-length = 100
exclude = [".venv", "__pycache__", "*.egg-info"]
ignore = ["E501", "W503"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
